<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanc_casse"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.createurdemploidutemps.TaskActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <EditText
                android:id="@+id/nom_activite"
                style="@style/wrapped"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:hint="@string/nom_activite"
                android:inputType="textCapSentences"
                android:singleLine="true" />

            <EditText
                android:id="@+id/description_activite"
                style="@style/wrapped"
                android:layout_below="@id/nom_activite"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"
                android:hint="@string/desc_activite"
                android:inputType="textCapSentences"
                android:singleLine="true" />

            <EditText
                android:id="@+id/debut"
                style="@style/wrapped"
                android:layout_below="@id/description_activite"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"
                android:hint="@string/heure_debut"
                android:singleLine="true" />

            <EditText
                android:id="@+id/fin"
                style="@style/wrapped"
                android:layout_below="@id/debut"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"
                android:hint="@string/heure_fin"
                android:singleLine="true" />

            <ImageView
                android:id="@+id/image_choisie"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_below="@id/fin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:background="@drawable/image_dejeuner" />

            <HorizontalScrollView
                android:id="@+id/scroll_images"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_choisie"
                android:layout_marginTop="30dp" >

                <LinearLayout
                    android:id="@+id/images"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >

                    <ImageButton
                        android:id="@+id/dejeuner"
                        style="@style/imageTask"
                        android:background="@drawable/dejeuner"
                        android:tag="dejeuner" />

                    <ImageButton
                        android:id="@+id/cours"
                        style="@style/imageTask"
                        android:background="@drawable/cours"
                        android:tag="cours" />

                    <ImageButton
                        android:id="@+id/dodo"
                        style="@style/imageTask"
                        android:background="@drawable/dodo"
                        android:tag="dodo" />

                    <ImageButton
                        android:id="@+id/jeu"
                        style="@style/imageTask"
                        android:background="@drawable/jeu"
                        android:tag="jeu" />

                  
                    <Button
                        android:id="@+id/autre"
                        style="@style/imageTask"
                        android:background="@color/blanc_casse"
                        android:text=" ... "
                        android:textSize="60sp" />
                </LinearLayout>
            </HorizontalScrollView>

            <Button
                android:id="@+id/changer_couleur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/scroll_images"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/choix_couleur" />

            <Button
                android:id="@+id/valider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/changer_couleur"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:text="@string/bouton_ok" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>